--- a/starter/app/src/main/res/navigation/nav_graph.xml
+++ b/starter/app/src/main/res/navigation/nav_graph.xml
@@ -6,19 +6,19 @@
 
     <fragment
         android:id="@+id/loginFragment"
-        android:label="LoginFragment"
+        android:name="com.udacity.shoestore.screens.login.LoginFragment"
+        android:label="@string/login_appbar"
         tools:layout="@layout/login_fragment">
         <action
             android:id="@+id/action_loginFragment_to_welcomeFragment"
             app:destination="@id/welcomeFragment"
-            app:launchSingleTop="true"
             app:popUpTo="@id/loginFragment"
             app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/welcomeFragment"
         android:name="com.udacity.shoestore.screens.welcome.WelcomeFragment"
-        android:label="fragment_welcome"
+        android:label="@string/welcome_appbar"
         tools:layout="@layout/welcome_fragment" >
         <action
             android:id="@+id/action_welcomeFragment_to_instructionFragment"
@@ -28,7 +28,7 @@
     <fragment
         android:id="@+id/instructionFragment"
         android:name="com.udacity.shoestore.screens.instruction.InstructionFragment"
-        android:label="instruction_fragment"
+        android:label="@string/instruction_appbar"
         tools:layout="@layout/instruction_fragment" >
         <action
             android:id="@+id/action_instructionFragment_to_shoesFragment2"
@@ -40,22 +40,17 @@
     <fragment
         android:id="@+id/shoesFragment"
         android:name="com.udacity.shoestore.screens.shoes.ShoesFragment"
-        android:label="test_fragment"
+        android:label="@string/shoes_appbar"
         tools:layout="@layout/shoes_fragment" >
         <action
             android:id="@+id/action_shoesFragment_to_shoeDetailFragment"
             app:destination="@id/shoeDetailFragment"
             app:launchSingleTop="true" />
-        <argument
-            android:name="newShoe"
-            app:argType="com.udacity.shoestore.models.Shoe"
-            app:nullable="true"
-            android:defaultValue="@null" />
     </fragment>
     <fragment
         android:id="@+id/shoeDetailFragment"
         android:name="com.udacity.shoestore.screens.shoedetail.ShoeDetailFragment"
-        android:label="shoe_detail_fragment"
+        android:label="@string/shoe_details_appbar"
         tools:layout="@layout/shoe_detail_fragment" >
         <action
             android:id="@+id/action_shoeDetailFragment_to_shoesFragment"
