--- a/starter/app/src/main/res/layout/instruction_fragment.xml
+++ b/starter/app/src/main/res/layout/instruction_fragment.xml
@@ -1,73 +1,67 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?><!-- For this very simple layout I used Linear layout
+because it's easier to read code and more efficient for system-->
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".screens.instruction.InstructionFragment">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/header_instruction_text"
             style="@style/HeaderText"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            android:text="@string/header_instruction_text"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:gravity="center_horizontal"
+            android:text="@string/header_instruction_text" />
 
         <TextView
             android:id="@+id/paragraph_instruction1_text"
             style="@style/ParagraphText"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="64dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="64dp"
             android:layout_marginEnd="64dp"
-            android:text="@string/paragraph_instruction1_text"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/header_instruction_text" />
+            android:layout_weight="2"
+            android:text="@string/paragraph_instruction1_text" />
 
         <TextView
             android:id="@+id/paragraph_instruction2_text"
             style="@style/ParagraphText"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="64dp"
             android:layout_marginTop="32dp"
-            android:text="@string/paragraph_instruction2_text"
-            app:layout_constraintEnd_toEndOf="@+id/paragraph_instruction1_text"
-            app:layout_constraintStart_toStartOf="@+id/paragraph_instruction1_text"
-            app:layout_constraintTop_toBottomOf="@+id/paragraph_instruction1_text" />
+            android:layout_marginEnd="64dp"
+            android:layout_weight="2"
+            android:text="@string/paragraph_instruction2_text" />
 
         <TextView
             android:id="@+id/paragraph_instruction3_text"
             style="@style/ParagraphText"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="64dp"
             android:layout_marginTop="32dp"
-            android:text="@string/paragraph_instruction3_text"
-            app:layout_constraintEnd_toEndOf="@+id/paragraph_instruction2_text"
-            app:layout_constraintStart_toStartOf="@+id/paragraph_instruction2_text"
-            app:layout_constraintTop_toBottomOf="@+id/paragraph_instruction2_text" />
+            android:layout_marginEnd="64dp"
+            android:layout_weight="2"
+            android:text="@string/paragraph_instruction3_text" />
 
         <Button
             android:id="@+id/instruction_button"
             style="@style/ButtonColored"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
-            android:text="@string/welcome_button_text"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            android:text="@string/welcome_button_text" />
+    </LinearLayout>
 
 </layout>
