--- a/starter/app/src/main/res/layout/login_fragment.xml
+++ b/starter/app/src/main/res/layout/login_fragment.xml
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?><!-- Here I used Constraint layout because it's more convenient
+ for me as developer and also it's easier to set heights paddings and margins to my preferences-->
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
@@ -44,13 +45,13 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
+            android:autofillHints="email"
             android:ems="10"
             android:hint="@string/email_hint"
             android:inputType="textEmailAddress"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/email_text"
-            android:autofillHints="email" />
+            app:layout_constraintTop_toBottomOf="@+id/email_text" />
 
         <EditText
             android:id="@+id/password_edit"
@@ -61,11 +62,11 @@
             android:layout_marginEnd="@dimen/margin_default"
             android:ems="10"
             android:hint="@string/password_hint"
+            android:importantForAutofill="no"
             android:inputType="textPassword"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/password_text"
-            android:importantForAutofill="no" />
+            app:layout_constraintTop_toBottomOf="@+id/password_text" />
 
         <Button
             android:id="@+id/existing_user_button"
