--- a/starter/app/src/main/res/layout/shoe_detail_fragment.xml
+++ b/starter/app/src/main/res/layout/shoe_detail_fragment.xml
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?><!-- Here I used Constraint layout because it's more convenient
+ for me as developer and also it's easier to set heights paddings and margins to my preferences-->
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -6,8 +7,11 @@
 
     <data>
         <variable
-            name="shoeDetailViewModel"
-            type="com.udacity.shoestore.screens.shoedetail.ShoeDetailViewModel" />
+            name="shoe"
+            type="com.udacity.shoestore.models.Shoe" />
+        <variable
+            name="shoeDetailFragment"
+            type="com.udacity.shoestore.screens.shoedetail.ShoeDetailFragment" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -64,6 +68,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
             android:ems="10"
+            android:text="@={shoe.name}"
             android:hint="@string/shoe_name_detail_hint"
             android:inputType="textPersonName"
             app:layout_constraintEnd_toEndOf="parent"
@@ -77,6 +82,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
             android:ems="10"
+            android:text="@={shoe.company}"
             android:hint="@string/company_detail_hint"
             android:inputType="textPersonName"
             app:layout_constraintEnd_toEndOf="parent"
@@ -90,6 +96,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
             android:ems="10"
+            android:text="@={`` + shoe.size}"
             android:hint="@string/shoe_size_detail_hint"
             android:inputType="numberDecimal"
             app:layout_constraintEnd_toEndOf="parent"
@@ -104,6 +111,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
             android:ems="10"
+            android:text="@={shoe.description}"
             android:gravity="start|top"
             android:hint="@string/description_detail_hint"
             android:inputType="textMultiLine"
@@ -131,7 +139,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
             android:text="@string/save_generic"
-            android:onClick="@{() -> shoeDetailViewModel.onDataSave()}"
+            android:onClick="@{() -> shoeDetailFragment.saveShoe(shoe)}"
             app:layout_constraintBottom_toTopOf="@+id/cancel_detail_button"
             app:layout_constraintEnd_toEndOf="@+id/cancel_detail_button"
             app:layout_constraintStart_toStartOf="@+id/cancel_detail_button" />
